# rst-timer

./: .gitignore  CONTRIBUTING.es.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  README.md  package.json
.github/workflows/: build.yml
scripts/: update-version.cjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
